Preparing For Version chacker

--- a/app.config
+++ b/app.config
@@ -2,11 +2,20 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="Packager.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="ReleaseMakerScript.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
             <section name="ConsoleApplication1.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <userSettings>
+        <Packager.Properties.Settings>
+            <setting name="ExcludeReleaseZipFile" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="EnableLog" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </Packager.Properties.Settings>
         <ReleaseMakerScript.Properties.Settings>
             <setting name="ExcludeReleaseZipFile" serializeAs="String">
                 <value>True</value>
