--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="ReleaseMakerScript.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Packager.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="ReleaseLocation" Type="System.Collections.Specialized.StringCollection" Scope="User">
@@ -9,6 +9,9 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="ExcludeReleaseZipFile" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="EnableLog" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
