--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DotNetZip" version="1.9.6" targetFramework="net40" />
+  <package id="Microsoft.Web.WebJobs.Publish" version="1.0.4" targetFramework="net45" />
   <package id="Octokit" version="0.14.0" targetFramework="net45" />
 </packages>
