--- a/app.config
+++ b/app.config
@@ -1,33 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="Packager.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
-            <section name="ReleaseMakerScript.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
-            <section name="ConsoleApplication1.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
-        </sectionGroup>
-    </configSections>
-    <userSettings>
-        <Packager.Properties.Settings>
-            <setting name="ExcludeReleaseZipFile" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="EnableLog" serializeAs="String">
-                <value>True</value>
-            </setting>
-        </Packager.Properties.Settings>
-        <ReleaseMakerScript.Properties.Settings>
-            <setting name="ExcludeReleaseZipFile" serializeAs="String">
-                <value>True</value>
-            </setting>
-        </ReleaseMakerScript.Properties.Settings>
-        <ConsoleApplication1.Properties.Settings>
-            <setting name="ReleaseLocation" serializeAs="String">
-                <value/>
-            </setting>
-        </ConsoleApplication1.Properties.Settings>
-    </userSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/></startup>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="Packager.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+      <section name="ReleaseMakerScript.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+      <section name="ConsoleApplication1.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+    </sectionGroup>
+  </configSections>
+  <userSettings>
+    <Packager.Properties.Settings>
+      <setting name="ExcludeReleaseZipFile" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="EnableLog" serializeAs="String">
+        <value>True</value>
+      </setting>
+    </Packager.Properties.Settings>
+    <ReleaseMakerScript.Properties.Settings>
+      <setting name="ExcludeReleaseZipFile" serializeAs="String">
+        <value>True</value>
+      </setting>
+    </ReleaseMakerScript.Properties.Settings>
+    <ConsoleApplication1.Properties.Settings>
+      <setting name="ReleaseLocation" serializeAs="String">
+        <value/>
+      </setting>
+    </ConsoleApplication1.Properties.Settings>
+  </userSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
+  </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
